# stranger

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: other-issue.md
.github/workflows/: build_and_publish.yml  linting_and_fixing.yml  linting_only.yml  server_stage_docker_push.yml  tests_and_cov.yml  vulture.yml
scripts/: check_expansions.py  check_hgnc_id.py  compare_locus_values_json.py
stranger/: __main__.py  cli.py  constants.py  utils.py  vcf_utils.py
stranger/resources/: __init__.py  repeatexpansionsloci.tsv  variant_catalog_grch37.json  variant_catalog_grch38.json  variant_catalog_hg19.json  variant_catalog_hg38.json  variant_catalog_references.json
tests/: conftest.py  test_utils.py
tests/cli/: test_cli.py
tests/fixtures/: 643594.clinical.str.vcf  HG002_Revio.sort.vcf.gz.tbi  sample.trgt.vcf
