[project]
name = "stranger"
version = "0.9.2"
description = "Annotate VCF files with STR variants with pathogenicity implications"
authors = [{name="Daniel Nilsson", email="daniel.nilsson@ki.se"}, {name="Mans Magnuson", email="mans.magnusson@scilifelab.se"}]
license = "MIT"
readme = "README.md"
include = [
  "README.md",
  "stranger/**/*",
  "tests/**/*"
]
requires-python = ">=3.7"
keywords = ["vcf", "variants", "str"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Unix",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click",
    "coloredlogs",
    "importlib-resources>=5.12.0",
    "PyYAML",
]

[project.urls]
Repository = "https://github.com/Clinical-Genomics/stranger"
Changelog = "https://github.com/Clinical-Genomics/stranger/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Clinical-Genomics/stranger/issues"

[project.optional-dependencies]
test = ["pytest","pytest-cov"]
dev = ["ruff>=0.7.2"]

[project.scripts]
stranger = "stranger.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
src = ["stranger", "tests", "scripts"]

